# pyhampel

./: README.md  requirements.txt  setup.cfg  setup.py
pyhampel/: LICENSE  __init__.py  __main__.py  setup.py
pyhampel/dataviz/: __init__.py  interactive_viz.py
pyhampel/ingestion/: __init__.py  time_series_ingestion.py
pyhampel/src/: HampelFiltering.py  __init__.py  filtering.py  filtering_with_dev.py  multiproc_filtering.py  multiproc_filtering_w_dev.py
pyhampel/src2/: multiproc_filtering_w_dev.py
pyhampel/utils/: __init__.py  ts_utils.py
