[metadata]
# replace with your username:
name = pyhampel
version = 0.3.1
author = Py Hampel
author_email = pyhampel@gmail.com
description = A flexible package to apply Hampel filter to time series data.  Identify outliers and filter time series.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dwervin/pyhampel
project_urls =
    Bug Tracker = https://github.com/dwervin/pyhampel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
        pandas
        multiprocessing
        plotly
        ipywidgets

python_requires = >=3.7
